--- a/.github/workflows/deploy_repo_guide.yml
+++ b/.github/workflows/deploy_repo_guide.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: "talonhub/community"
+      - run: git remote add wolfmanstout https://github.com/wolfmanstout/wolfmanstout_talon.git
       - uses: wolfmanstout/deploy-repo-guide@v1
         with:
           gemini-key: ${{ secrets.LLM_GEMINI_KEY }}
+          remote-name: "wolfmanstout"
