Use another approach to set working directory.

--- a/.github/workflows/deploy_repo_guide.yml
+++ b/.github/workflows/deploy_repo_guide.yml
@@ -9,15 +9,16 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: community
     steps:
       - uses: actions/checkout@v4
         with:
           repository: "talonhub/community"
           # If unset, the directory will be named wolfmanstout_talon, confusing repo-guide.
           path: "community"
-      - run: |
-          cd community
-          git remote add wolfmanstout https://github.com/wolfmanstout/wolfmanstout_talon.git
+      - run: git remote add wolfmanstout https://github.com/wolfmanstout/wolfmanstout_talon.git
       - uses: wolfmanstout/deploy-repo-guide@v1
         with:
           gemini-key: ${{ secrets.LLM_GEMINI_KEY }}
