Add token budget to deploy_repo_guide.yml

--- a/.github/workflows/deploy_repo_guide.yml
+++ b/.github/workflows/deploy_repo_guide.yml
@@ -22,3 +22,4 @@ jobs:
           gemini-key: ${{ secrets.LLM_GEMINI_KEY }}
           directory: "community"
           remote-name: "wolfmanstout"
+          token-budget: 10000000  # 10 million
