--- a/.github/workflows/deploy_repo_guide.yml
+++ b/.github/workflows/deploy_repo_guide.yml
@@ -23,3 +23,4 @@ jobs:
           directory: "community"
           remote-name: "wolfmanstout"
           token-budget: 10000000 # 10 million
+          google-analytics-id: "G-8S5FQCP6K4"
